--- a/Clock/Css/style.css
+++ b/Clock/Css/style.css
@@ -21,12 +21,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background: url(clock1.png); */
-    background: url(../Img/newclock.jpeg);
+    background: url(../Img/clock1.png);
+    /* background: url(../Img/newclock.jpeg); */
     background-size: cover;
     border: 25px solid #011f2d;
     border-radius: 50%;
-    box-shadow: 0 -15px 15px rgba(232, 12, 12, 0.05), inset 0 -15px 15px rgba(15, 15, 15, 0), 0 15px 15px rgba(119, 1, 115, 0.895), inset 0 15px 15px #0113135b;
+    box-shadow: 0 -15px 15px rgba(232, 12, 12, 0.05), inset 0 -15px 15px rgba(15, 15, 15, 0), 0 15px 15px rgba(62, 2, 39, 0.895), inset 0 15px 15px #0113135b;
 }
 
 /* Create hour hand, minute hand , and second hand*/
