--- a/Calculator/Css/calc.css
+++ b/Calculator/Css/calc.css
@@ -92,7 +92,7 @@
 
 .equal-sign {
 
-    background-color: #25a8e0;
+    background-color: #0d75a1;
 
     border-color: #25a8e0;
 
@@ -102,7 +102,7 @@
 
 .equal-sign:hover {
 
-    background-color: #065e99;
+    background-color: #66bdf7;
 
 }
 
